# lance-graph-eval

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.benchmark.yml  docker-compose.neo4j.yml  pyproject.toml
configs/: graphrag_eval.yaml  graphrag_eval_full_local.yaml  graphrag_eval_local.yaml  graphrag_eval_no_index.yaml
datasets/: README.md  embedding.json
docs/: datasets.md
results/: core_sweep_summary.csv  row_count_verification.md  summary_all_datasets.csv
results/graphrag_eval_v1_20260209_043430/: samples.csv  summary.csv  summary.json
results/graphrag_eval_v1_20260209_043531/: samples.csv  summary.csv  summary.json
results/graphrag_eval_v1_20260209_043606/: samples.csv  summary.csv  summary.json
results/graphrag_eval_v1_20260209_043644/: samples.csv  summary.csv  summary.json
results/graphrag_eval_v1_20260209_044439/: samples.csv  summary.csv  summary.json
results/graphrag_eval_v1_20260209_044453/: samples.csv  summary.csv  summary.json
results/graphrag_eval_v1_20260209_044624/: samples.csv  summary.csv  summary.json
results/graphrag_eval_v1_20260209_050043/: samples.csv  summary.csv  summary.json
results/graphrag_eval_v1_20260209_051625/: samples.csv  summary.csv  summary.json
results/graphrag_eval_v1_20260209_054946/: samples.csv  summary.csv  (+1 more)
scripts/: convert_graphrag_bench.py  convert_graphrag_bench_cs.py  ingest_kuzu.py  ingest_lance_graph.py  ingest_neo4j.py  make_embedding.py  prepare_lance.py  prepare_parquet.py  profile_deep_traversal_lance.py  profile_parent_child.py  run_core_sweep.sh  summarize_core_sweep.py
(+199 files in other folders)
